--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,1 +1,11 @@
+<header>
+  <h1>Ember Iron</h1>
+</header>
+
+<main>
 {{outlet}}
+</main>
+
+<footer>
+{{iron-history history=ironState.history}}
+</footer>
