update dummy app with step 1

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,6 @@
 <header>
   <h1>Ember Iron</h1>
+  <a target="_top" href="javascript: (function() { var s = document.createElement('script'); s.src = 'http://localhost:9191/bookmarklet/load_inspector.js'; document.body.appendChild(s); }());">Open Iron Inspector</a> (it may take a couple seconds to connect).
 </header>
 
 <main>
