--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,4 +1,1 @@
-<p>Ember-Iron keeps a log of all your state changes, try typing in the search box to see.</p>
-<div>
-  <label>Search: {{input type="text" value=(readonly searchText) key-up=(action "updateSearchText")}}</label>
-</div>
+{{#link-to "step1"}}Step 1{{/link-to}}
