--- a/tests/dummy/app/templates/step1.hbs
+++ b/tests/dummy/app/templates/step1.hbs
@@ -1,1 +1,4 @@
-{{outlet}}
+<p>Ember-Iron keeps a log of all your state changes, try typing in the search box to see.</p>
+<div>
+  <label>Search: {{input type="text" value=(readonly searchText) key-up=(action "updateSearchText")}}</label>
+</div>
